--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rby",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://grounddemon.github.io/rby/",
+  "homepage": "https://grounddemon.github.io",
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.8.6",
@@ -34,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
